# lesspass

./: .dockerignore  .editorconfig  .envrc  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .travis.yml  .yarnrc.yml  AGENTS.md  About LessPass  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUE_TEMPLATE  LICENSE  Press Release  README.md  TODO.md  aws.js  backend.conf.j2  build.sh  cli.js  config.xml  contirbutors.md  default.nix  dev-utils.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker.env  entrypoint.sh  gulpfile.js  index.html  index.js  index2.html  install.py  lesspass.html  (+34 more)
.codex/: hooks.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
api/: admin.py  data_migrations.py  models.py  serializers.py  urls.py  views.py
app/: App.vue  app.js  app.old.js  app.old.vue  app.vue  crypto.js  lesspass.js  locales.js  main.js  password-generator.js  router.js  routes.js
assets/: robots.txt
backend/: .gitignore  Dockerfile  README.md  manage.py  manage_py  requirements.txt  runtime.txt
cli/: .travis.yml  README.md  deploy  package.json  setup.py  test  test-requirements.txt  test.js  tox.ini
conf.d/: backend.conf
config/: config.ini  config.test.ini  (+5 more)
crates/lesspass-core/: Cargo.toml
crates/lesspass-core/src/: crypto.rs  fingerprint.rs  lib.rs  render.rs  types.rs
crates/lesspass-core/tests/: compatibility.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: db.rs  error.rs  keychain.rs  lib.rs  main.rs  models.rs  session.rs
desktop/src-tauri/tests/: db_tests.rs  session_tests.rs
(+963 files in other folders)
